syntax = "proto2";

package kangaroo.engine;

message Account {
  enum Type {
    TOPLEVEL = 0;      // The parent of all accounts. Can only be defined once.

    ASSET = 1;         // Generic asset
    LIABILITY = 2;     // Generic liability
    EQUITY = 3;        // Equity
    INCOME = 4;        // Income
    EXPENSE = 5;       // Expense
    TRADING = 6;       // For currency/security exchanges
    CASH = 10;         // Cash

    CHECKING = 11;     // Checking account
    INVESTMENT = 12;   // Investment (stock, bond, etf, etc.)
    DEPOSIT = 13;      // Security deposit
    PREPAIDCARD = 14;  // Prepaid cards, gift cards

    SAVINGS = 18;      // Savings account
    BROKERAGE = 19;    // Brokerage account

    CREDITCARD = 20;

    PROPERTY = 30;

    ACC_PAY = 40;
    ACC_REC = 41;
  }

  // [Required] Unique identifier.
  optional int64 id = 1;

  // [Required] Type of account.
  optional Type type = 2;

  // [Required] User-defined name for the account.
  optional string name = 3;

  // [Optional] User-defined account idendifier.
  optional string code = 4;

  // [Required] Transactions in closed accounts may not be changed.
  optional bool is_open = 5 [default = true];

  // [Required] Placeholder accounts may not have transactions.
  optional bool is_placeholder = 6 [default = false];

  // [Required] Commodities allowed in this account. Must have at least 1.
  repeated int64 commodity_id = 7;

  // [Required] Main account commodity. Must be in commodity_id.
  optional int64 main_commodity_id = 8;

  // [Optional]
  optional int64 institution_id = 13;

  // [Optional]
  optional int64 icon_id = 14;

  // [Optional]
  optional string note = 15;
}

message AccountHierarchy {
 // [Required]
 optional Account account = 1;

  // [Optional] Children of this account.
 repeated Account child = 2;
}